SERVER-61353: Remove development version warning log